commiting the web based interface

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,29 @@
-# https://www.playframework.com/documentation/latest/Configuration
+
+# Database configuration
+# ~~~~~
+# You can declare as many datasources as you want.
+# By convention, the default datasource is named `default`
+
+h2mem1 = {
+  url = "jdbc:h2:mem:test1"
+  driver = org.h2.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+}
+
+
+
+
+
+
+
+
+
+applyEvolutions.default=true
+//play.filters.disabled+=play.filters.csrf.CSRFFilter
+
+# Assets configuration
+# ~~~~~
+"assets.cache./public/stylesheets/bootstrap.min.css"="max-age=3600"
+
+
