--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,14 +10,7 @@ h2mem1 = {
   connectionPool = disabled
   keepAliveConnection = true
 }
-
-
-
-
-
-
-
-
+play.filters.enabled += "play.filters.cors.CORSFilter"
 
 applyEvolutions.default=true
 //play.filters.disabled+=play.filters.csrf.CSRFFilter
